--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "babelify": "^6.4.0",
     "browserify": "^14.3.0",
     "gulp": "^3.9.1",
+    "jest-cli": "^20.0.4",
     "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC"
