--- a/package.json
+++ b/package.json
@@ -4,21 +4,31 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "babelify": "^6.4.0",
-    "browserify": "^14.3.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "snapkite-stream-client": "^1.0.3"
   },
   "devDependencies": {
+    "babel-jest": "^20.0.3",
     "babelify": "^6.4.0",
     "browserify": "^14.3.0",
     "gulp": "^3.9.1",
     "jest-cli": "^20.0.4",
+    "react-addons-test-utils": "^15.5.1",
     "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "test": "jest"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "testFileExtensions": [
+      "es6",
+      "js"
+    ],
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react"
+    ]
   },
   "author": "",
   "license": "ISC"
